# hot-hog-bicycle

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  railway.toml
backend/: appeal.py  autoplay.py  challenger.py  config.py  game.py  judge.py  main.py  models.py  openrouter.py  posthog_setup.py  tools.py
frontend/: gallery.html  game.html  index.html  leaderboard.html  results.html
frontend/static/: posthog-init.js  style.css  svg-code.js
